// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`The FootballNotificationsLambda stack matches the snapshot for CODE 1`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "mobile-notifications-football",
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "App": {
      "Default": "football",
      "Description": "Application name",
      "Type": "String",
    },
    "DeployBucket": {
      "Default": "mobile-dist",
      "Description": "Bucket where RiffRaff uploads artifacts on deploy",
      "Type": "String",
    },
    "DynamoNotificationTopic": {
      "Description": "SNS topic to notify when there's a dynamo throttling event",
      "Type": "String",
    },
    "Stack": {
      "Default": "mobile-notifications",
      "Description": "Stack name",
      "Type": "String",
    },
    "Stage": {
      "AllowedValues": [
        "CODE",
        "PROD",
      ],
      "Default": "CODE",
      "Description": "Stage name",
      "Type": "String",
    },
  },
  "Resources": {
    "DynamoTable": {
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "notificationId",
            "AttributeType": "S",
          },
        ],
        "KeySchema": [
          {
            "AttributeName": "notificationId",
            "KeyType": "HASH",
          },
        ],
        "ProvisionedThroughput": {
          "ReadCapacityUnits": 3,
          "WriteCapacityUnits": 3,
        },
        "TableName": {
          "Fn::Sub": "\${Stack}-\${App}-notifications-\${Stage}",
        },
        "Tags": [
          {
            "Key": "devx-backup-enabled",
            "Value": "true",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "TimeToLiveSpecification": {
          "AttributeName": "ttl",
          "Enabled": true,
        },
      },
      "Type": "AWS::DynamoDB::Table",
    },
    "ErrorEvent": {
      "Properties": {
        "FilterPattern": "Error",
        "LogGroupName": {
          "Fn::Sub": "/aws/lambda/\${Lambda}",
        },
        "MetricTransformations": [
          {
            "MetricName": "error",
            "MetricNamespace": {
              "Fn::Sub": "\${Stage}/football-notifications",
            },
            "MetricValue": "1",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "ExecutionRole": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": [
                  "lambda.amazonaws.com",
                ],
              },
            },
          ],
        },
        "Path": "/",
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": {
                "Action": [
                  "logs:CreateLogGroup",
                  "logs:CreateLogStream",
                  "logs:PutLogEvents",
                ],
                "Effect": "Allow",
                "Resource": "arn:aws:logs:*:*:*",
              },
            },
            "PolicyName": "logs",
          },
          {
            "PolicyDocument": {
              "Statement": {
                "Action": [
                  "lambda:InvokeFunction",
                ],
                "Effect": "Allow",
                "Resource": "*",
              },
            },
            "PolicyName": "lambda",
          },
          {
            "PolicyDocument": {
              "Statement": {
                "Action": [
                  "ssm:GetParametersByPath",
                ],
                "Effect": "Allow",
                "Resource": {
                  "Fn::Sub": "arn:aws:ssm:\${AWS::Region}:\${AWS::AccountId}:parameter/\${App}/\${Stage}/\${Stack}",
                },
              },
            },
            "PolicyName": "ssmConfig",
          },
          {
            "PolicyDocument": {
              "Statement": {
                "Action": [
                  "dynamodb:PutItem",
                  "dynamodb:UpdateItem",
                  "dynamodb:Query",
                ],
                "Effect": "Allow",
                "Resource": {
                  "Fn::Sub": "arn:aws:dynamodb:eu-west-1:201359054765:table/\${Stack}-\${App}-notifications-\${Stage}",
                },
              },
            },
            "PolicyName": "dynamodb",
          },
        ],
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "GoalEvent": {
      "Properties": {
        "FilterPattern": "successfully sent",
        "LogGroupName": {
          "Fn::Sub": "/aws/lambda/\${Lambda}",
        },
        "MetricTransformations": [
          {
            "MetricName": "goal-success",
            "MetricNamespace": {
              "Fn::Sub": "\${Stage}/football-notifications",
            },
            "MetricValue": "1",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "Lambda": {
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DeployBucket",
          },
          "S3Key": {
            "Fn::Sub": "\${Stack}/\${Stage}/\${App}/\${App}.jar",
          },
        },
        "Description": "Send Goal Alert notifications",
        "Environment": {
          "Variables": {
            "App": {
              "Ref": "App",
            },
            "Stack": {
              "Ref": "Stack",
            },
            "Stage": {
              "Ref": "Stage",
            },
          },
        },
        "FunctionName": {
          "Fn::Sub": "\${Stack}-\${App}-\${Stage}",
        },
        "Handler": "com.gu.mobile.notifications.football.Lambda::handler",
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": "ExecutionRole.Arn",
        },
        "Runtime": "java11",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 60,
      },
      "Type": "AWS::Lambda::Function",
    },
    "MinuteEvent": {
      "Properties": {
        "Description": "Event sent to poll PA for match events",
        "ScheduleExpression": "cron(* * * * ? *)",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": "Lambda.Arn",
            },
            "Id": "Lambda",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "MinuteEventLambdaPermission": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": "Lambda.Arn",
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": "MinuteEvent.Arn",
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "MobileNotificationsFootballConsumedReadThrottleEvents": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "DynamoNotificationTopic",
          },
        ],
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "TableName",
            "Value": {
              "Ref": "DynamoTable",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "ReadThrottleEvents",
        "Namespace": "AWS/DynamoDB",
        "Period": 300,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": 10,
        "TreatMissingData": "notBreaching",
        "Unit": "Count",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "MobileNotificationsFootballConsumedWriteThrottleEvents": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "DynamoNotificationTopic",
          },
        ],
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "TableName",
            "Value": {
              "Ref": "DynamoTable",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "WriteThrottleEvents",
        "Namespace": "AWS/DynamoDB",
        "Period": 300,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": 10,
        "TreatMissingData": "notBreaching",
        "Unit": "Count",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
}
`;

exports[`The FootballNotificationsLambda stack matches the snapshot for PROD 1`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "mobile-notifications-football",
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "App": {
      "Default": "football",
      "Description": "Application name",
      "Type": "String",
    },
    "DeployBucket": {
      "Default": "mobile-dist",
      "Description": "Bucket where RiffRaff uploads artifacts on deploy",
      "Type": "String",
    },
    "DynamoNotificationTopic": {
      "Description": "SNS topic to notify when there's a dynamo throttling event",
      "Type": "String",
    },
    "Stack": {
      "Default": "mobile-notifications",
      "Description": "Stack name",
      "Type": "String",
    },
    "Stage": {
      "AllowedValues": [
        "CODE",
        "PROD",
      ],
      "Default": "CODE",
      "Description": "Stage name",
      "Type": "String",
    },
  },
  "Resources": {
    "DynamoTable": {
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "notificationId",
            "AttributeType": "S",
          },
        ],
        "KeySchema": [
          {
            "AttributeName": "notificationId",
            "KeyType": "HASH",
          },
        ],
        "ProvisionedThroughput": {
          "ReadCapacityUnits": 3,
          "WriteCapacityUnits": 3,
        },
        "TableName": {
          "Fn::Sub": "\${Stack}-\${App}-notifications-\${Stage}",
        },
        "Tags": [
          {
            "Key": "devx-backup-enabled",
            "Value": "true",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "TimeToLiveSpecification": {
          "AttributeName": "ttl",
          "Enabled": true,
        },
      },
      "Type": "AWS::DynamoDB::Table",
    },
    "ErrorEvent": {
      "Properties": {
        "FilterPattern": "Error",
        "LogGroupName": {
          "Fn::Sub": "/aws/lambda/\${Lambda}",
        },
        "MetricTransformations": [
          {
            "MetricName": "error",
            "MetricNamespace": {
              "Fn::Sub": "\${Stage}/football-notifications",
            },
            "MetricValue": "1",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "ExecutionRole": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": [
                  "lambda.amazonaws.com",
                ],
              },
            },
          ],
        },
        "Path": "/",
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": {
                "Action": [
                  "logs:CreateLogGroup",
                  "logs:CreateLogStream",
                  "logs:PutLogEvents",
                ],
                "Effect": "Allow",
                "Resource": "arn:aws:logs:*:*:*",
              },
            },
            "PolicyName": "logs",
          },
          {
            "PolicyDocument": {
              "Statement": {
                "Action": [
                  "lambda:InvokeFunction",
                ],
                "Effect": "Allow",
                "Resource": "*",
              },
            },
            "PolicyName": "lambda",
          },
          {
            "PolicyDocument": {
              "Statement": {
                "Action": [
                  "ssm:GetParametersByPath",
                ],
                "Effect": "Allow",
                "Resource": {
                  "Fn::Sub": "arn:aws:ssm:\${AWS::Region}:\${AWS::AccountId}:parameter/\${App}/\${Stage}/\${Stack}",
                },
              },
            },
            "PolicyName": "ssmConfig",
          },
          {
            "PolicyDocument": {
              "Statement": {
                "Action": [
                  "dynamodb:PutItem",
                  "dynamodb:UpdateItem",
                  "dynamodb:Query",
                ],
                "Effect": "Allow",
                "Resource": {
                  "Fn::Sub": "arn:aws:dynamodb:eu-west-1:201359054765:table/\${Stack}-\${App}-notifications-\${Stage}",
                },
              },
            },
            "PolicyName": "dynamodb",
          },
        ],
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "GoalEvent": {
      "Properties": {
        "FilterPattern": "successfully sent",
        "LogGroupName": {
          "Fn::Sub": "/aws/lambda/\${Lambda}",
        },
        "MetricTransformations": [
          {
            "MetricName": "goal-success",
            "MetricNamespace": {
              "Fn::Sub": "\${Stage}/football-notifications",
            },
            "MetricValue": "1",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "Lambda": {
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DeployBucket",
          },
          "S3Key": {
            "Fn::Sub": "\${Stack}/\${Stage}/\${App}/\${App}.jar",
          },
        },
        "Description": "Send Goal Alert notifications",
        "Environment": {
          "Variables": {
            "App": {
              "Ref": "App",
            },
            "Stack": {
              "Ref": "Stack",
            },
            "Stage": {
              "Ref": "Stage",
            },
          },
        },
        "FunctionName": {
          "Fn::Sub": "\${Stack}-\${App}-\${Stage}",
        },
        "Handler": "com.gu.mobile.notifications.football.Lambda::handler",
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": "ExecutionRole.Arn",
        },
        "Runtime": "java11",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 60,
      },
      "Type": "AWS::Lambda::Function",
    },
    "MinuteEvent": {
      "Properties": {
        "Description": "Event sent to poll PA for match events",
        "ScheduleExpression": "cron(* * * * ? *)",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": "Lambda.Arn",
            },
            "Id": "Lambda",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "MinuteEventLambdaPermission": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": "Lambda.Arn",
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": "MinuteEvent.Arn",
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "MobileNotificationsFootballConsumedReadThrottleEvents": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "DynamoNotificationTopic",
          },
        ],
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "TableName",
            "Value": {
              "Ref": "DynamoTable",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "ReadThrottleEvents",
        "Namespace": "AWS/DynamoDB",
        "Period": 300,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 10,
        "TreatMissingData": "notBreaching",
        "Unit": "Count",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "MobileNotificationsFootballConsumedWriteThrottleEvents": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "DynamoNotificationTopic",
          },
        ],
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "TableName",
            "Value": {
              "Ref": "DynamoTable",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "WriteThrottleEvents",
        "Namespace": "AWS/DynamoDB",
        "Period": 300,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 10,
        "TreatMissingData": "notBreaching",
        "Unit": "Count",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
}
`;
